src/test/ui/unboxed-closures/unboxed-closures-failed-recursive-fn-2.stderr
error[E0282]: type annotations needed for `std::option::Option<T>`
  --> $DIR/unboxed-closures-failed-recursive-fn-2.rs:16:32
   |
LL |                         return c();
   |                                ^^^ cannot infer type
   |
   = note: type must be known at this point
help: consider giving this binding the explicit type `std::option::Option<T>`, with the type parameters specified
   |
LL |     let mut closure0: std::option::Option<T> = None;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
